# MyStekz-Focus-Group

./: .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
src/mystekz_focus_group/: agents.py  crew.py  main.py  mystekz.txt
src/mystekz_focus_group/config/: agents.yaml  tasks.yaml
