[tool.poetry]
name = "mystekz_focus_group"
version = "0.1.0"
description = "mystekz-focus-group using crewAI"
authors = ["Jelle Klaver <jelle@stekz.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "0.70.1" }
chainlit = "^1.2.0"


[tool.poetry.scripts]
chat = "mystekz_focus_group.main:chat"
chat_watch = "mystekz_focus_group.main:chat_watch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
